fix button spacing

--- a/app/css/modules/material.css
+++ b/app/css/modules/material.css
@@ -50,9 +50,9 @@
   color: rgba(0, 0, 0, 0.54);
   margin: 0 5px;
   outline: none;
-  line-height: 54px;
-  height: 54px;
-  min-height: 54px;
+  line-height: 50px;
+  height: 50px;
+  min-height: 50px;
 }
 
 .mdl-layout__drawer .avatar {
